--- a/package.json
+++ b/package.json
@@ -3,13 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build:doc": "docker build -t gaulish .",
+    "dev:doc": "docker run --rm --name gaulish -p 3000:3000 -v $INIT_CWD:/usr/src gaulish",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy:aws": "next build && next export && aws s3 cp --recursive ./out s3://gaulish.io",
+    "invalidate:aws": "aws cloudfront create-invalidation --distribution-id E2LOFNVM8FUB0I --paths \"/*\"",
+    "analyze": "cross-env ANALYZE=true next build",
+    "clean": "rm -rf node_modules/ & rm -rf .next/ & rm -rf out/ & rm package-lock.json",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.2",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.1.2"
   }
 }
