Got AWS cognito working!
despite the us-east-1 outage for 8 hours!

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy:aws": "next build && next export && aws s3 cp --recursive ./out s3://gaulish.io",
-    "invalidate:aws": "aws cloudfront create-invalidation --distribution-id E2LOFNVM8FUB0I --paths \"/*\"",
+    "deploy:aws": "next build && next export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
+    "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\"",
     "analyze": "cross-env ANALYZE=true next build",
     "clean": "rm -rf node_modules/ & rm -rf .next/ & rm -rf out/ & rm package-lock.json",
     "lint": "eslint . --fix"
@@ -33,6 +33,8 @@
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "cross-env": "^7.0.2",
+    "cross-var": "^1.1.0",
+    "dotenv-cli": "^4.0.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
