--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "scripts": {
     "build:doc": "docker build -t gaulish .",
     "dev:doc": "docker run --rm --name gaulish -p 3000:3000 -v $INIT_CWD:/usr/src gaulish",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
-    "deploy:aws": "next build && next export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
+    "dev": "",
+    "build": "",
+    "start": "",
+    "export": "",
+    "deploy:aws": "npm run build && npm run export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
     "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\"",
-    "analyze": "cross-env ANALYZE=true next build",
-    "clean": "rm -rf node_modules/ & rm -rf .next/ & rm -rf out/ & rm package-lock.json",
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "next": "10.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
@@ -31,7 +28,6 @@
     ]
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.2",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
