--- a/aws/lambda/query-gaulish-db/function/package.json
+++ b/aws/lambda/query-gaulish-db/function/package.json
@@ -16,6 +16,7 @@
     "docker:build": "docker build -t gaulish .",
     "docker:dev": "docker run --rm --env-file=$npm_package_config_env_path --name gaulish -p 9000:8080 gaulish",
     "dev:docker": "npm run build && npm run docker:build && npm run docker:dev",
+    "ecr:init": "dotenv -e $npm_package_config_env_path -- cross-var aws ecr get-login-password --region %AWS_REGION% | docker login --username AWS --password-stdin %AWS_ACCOUNT_NUMBER%.dkr.ecr.%AWS_REGION%.amazonaws.com && aws ecr create-repository --repository-name **DOCKER_IMAGE_NAME** --image-scanning-configuration scanOnPush=true --image-tag-mutability MUTABLE",
     "ecr:tag": "dotenv -e $npm_package_config_env_path -- cross-var docker tag gaulish:latest %AWS_ACCOUNT_NUMBER%.dkr.ecr.%AWS_REGION%.amazonaws.com/gaulish:latest",
     "ecr:push": "dotenv -e $npm_package_config_env_path -- cross-var docker push %AWS_ACCOUNT_NUMBER%.dkr.ecr.%AWS_REGION%.amazonaws.com/gaulish:latest",
     "deploy": "npm run ecr:tag && npm run ecr:push"
