--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "build:doc": "docker build -t gaulish .",
     "dev:doc": "docker run --rm --name gaulish -p 3000:3000 -v $INIT_CWD:/usr/src gaulish",
-    "dev": "",
-    "build": "",
-    "start": "",
-    "export": "",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "deploy:aws": "npm run build && npm run export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
     "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\"",
     "lint": "eslint . --fix"
@@ -31,8 +30,10 @@
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "cross-env": "^7.0.2",
     "cross-var": "^1.1.0",
     "dotenv-cli": "^4.0.0",
@@ -46,6 +47,7 @@
     "lint-staged": "^10.5.1",
     "prettier": "^2.2.0",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "vite": "^2.2.3"
   }
 }
