--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "gaulish.io",
-  "version": "0.1.0",
-  "private": true,
+  "name": "gaulish",
+  "description": "Gaulish.io",
+  "version": "2.1.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build:doc": "docker build -t gaulish .",
     "dev:doc": "docker run --rm --name gaulish -p 3000:3000 -v $INIT_CWD:/usr/src gaulish",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
+    "dev": "snowpack dev",
+    "build": "snowpack build",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint . --fix",
+    "test": "web-test-runner \"src/**/*.test.tsx\"",
     "deploy:aws": "npm run build && npm run export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
-    "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\"",
-    "lint": "eslint . --fix"
+    "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\""
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{tsx,ts,js,jsx}": [
-      "npm run lint"
-    ]
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.13.13",
+    "@snowpack/plugin-babel": "^2.1.7",
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/plugin-webpack": "^2.3.1",
     "@types/node": "^14.14.9",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.0",
+    "@types/snowpack-env": "^2.3.2",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "cross-env": "^7.0.2",
     "cross-var": "^1.1.0",
     "dotenv-cli": "^4.0.0",
@@ -45,9 +46,18 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.1.2",
-    "vite": "^2.2.3"
+    "prettier": "^2.0.5",
+    "snowpack": "^3.0.1",
+    "typescript": "^4.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{tsx,ts,js,jsx}": [
+      "npm run lint"
+    ]
   }
 }
