--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-query": "^3.15.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
