--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\""
   },
   "dependencies": {
+    "graphql-request": "^3.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.15.2",
