--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "graphql-request": "^3.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.8.4",
     "react-query": "^3.15.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/cli": "^1.21.4",
@@ -32,7 +34,7 @@
     "@snowpack/plugin-babel": "^2.1.7",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.4.0",
-    "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/plugin-webpack": "^2.3.1",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.4",
@@ -53,8 +55,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.0.5",
-    "snowpack": "^3.0.1",
-    "typescript": "^4.0.0"
+    "snowpack": "^3.6.2",
+    "typescript": "^4.3.4"
   },
   "husky": {
     "hooks": {
