--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\""
   },
   "dependencies": {
+    "@reach/checkbox": "^0.16.0",
     "graphql-request": "^3.5.0",
     "graphql-ws": "^5.5.0",
     "react": "^17.0.2",
