--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.2",
     "react-query": "^3.23.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
@@ -41,6 +43,8 @@
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/snowpack-env": "^2.3.4",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
