--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@reach/checkbox": "^0.16.0",
+    "@socket.io/component-emitter": "^3.0.0",
     "graphql-request": "^3.5.0",
     "graphql-ws": "^5.5.0",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-query": "^3.23.2",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
