--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@reach/checkbox": "^0.16.0",
     "graphql-request": "^3.5.0",
+    "just-clone": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.2",
@@ -40,7 +41,7 @@
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/plugin-webpack": "^2.3.1",
-    "@types/node": "^16.9.1",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
