--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "socket.io-client": "^4.5.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.17.10",
@@ -41,8 +41,8 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/plugin-webpack": "^3.0.0",
     "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "@types/snowpack-env": "^2.3.4",
@@ -62,7 +62,8 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "typescript-plugin-styled-components": "^2.0.0"
   },
   "husky": {
     "hooks": {
