--- a/codegen.yml
+++ b/codegen.yml
@@ -1,10 +1,15 @@
 overwrite: true
-schema: "http://localhost:8080/graphql" #TODO: have this pull locally
+schema:
+  - http://localhost:8080/graphql:
+      method: GET
 generates:
   src/generated/graphql.ts:
     plugins:
       - add:
           content: '/* 🌶️ This is a generated file, do not modify! */'
       - typescript
+      - typescript-operations
+      - typescript-react-query
     config:
       showUnusedMappers: true
+      fetcher: fetch
