--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "scripts": {
     "build:doc": "docker build -t gaulish .",
     "dev:docker": "docker run --rm --name gaulish -p 3000:3000 -v $INIT_CWD:/usr/src gaulish",
-    "dev": "snowpack dev",
+    "dev": "snowpack dev --open none",
     "build": "snowpack build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint . --fix",
-    "generate-types": "graphql-codegen --config codegen.yml && npm run lint",
+    "generate-types": "graphql-codegen",
     "deploy:aws": "npm run build && npm run export && dotenv -- cross-var aws s3 cp --recursive ./out %S3_BUCKET_NAME%",
     "invalidate:aws": "dotenv -- cross-var aws cloudfront create-invalidation --distribution-id %CLOUDFRONT_DISTRIBUTION_ID% --paths \"/*\"",
     "prepare": "husky install"
   },
   "dependencies": {
     "graphql-request": "^4.2.0",
-    "just-clone": "^5.0.1",
+    "just-clone": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
@@ -34,8 +34,10 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/cli": "^2.7.0",
+    "@graphql-codegen/typescript": "^2.6.0",
+    "@graphql-codegen/typescript-operations": "^2.4.3",
+    "@graphql-codegen/typescript-react-query": "^3.5.15",
     "@snowpack/plugin-babel": "^2.1.7",
     "@snowpack/plugin-dotenv": "^2.2.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
@@ -52,7 +54,7 @@
     "@typescript-eslint/parser": "^5.23.0",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
-    "dotenv-cli": "^5.1.0",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
