--- a/codegen.yml
+++ b/codegen.yml
@@ -2,14 +2,18 @@ overwrite: true
 schema:
   - http://localhost:8080/graphql:
       method: GET
+documents: 'src/**/*.graphql'
 generates:
   src/generated/graphql.ts:
     plugins:
       - add:
-          content: '/* 🌶️ This is a generated file, do not modify! */'
+          content: 
+            - /* eslint-disable @typescript-eslint/ban-ts-comment */
+            - /* 🌶️ This is a generated file, do not modify! */
+            - // @ts-nocheck
       - typescript
       - typescript-operations
       - typescript-react-query
     config:
       showUnusedMappers: true
-      fetcher: fetch
+      fetcher: graphql-request
