--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.7.0",
+    "@graphql-codegen/cli": "^2.6.3",
     "@graphql-codegen/typescript": "^2.6.0",
     "@graphql-codegen/typescript-operations": "^2.4.3",
     "@graphql-codegen/typescript-react-query": "^3.5.15",
@@ -61,6 +61,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "graphql-config": "^4.3.1",
     "husky": "^8.0.0",
     "prettier": "^2.6.2",
     "snowpack": "^3.8.8",
